chore: 의존성 업데이트

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-boilerplate",
+  "name": "diary",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,10 +11,10 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.12",
+    "@apollo/client": "^3.7.14",
     "@hookform/resolvers": "^3.1.0",
     "apollo-link-timeout": "^4.0.0",
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "file-saver": "^2.0.5",
     "i18next": "^22.4.15",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -27,14 +27,14 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
-    "react-hot-toast": "^2.4.0",
+    "react-hot-toast": "^2.4.1",
     "react-hyper-tree": "^0.3.12",
     "react-i18next": "^12.2.2",
-    "react-kakao-maps-sdk": "^1.1.8",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-pdf": "^6.2.2",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.11.1",
     "read-excel-file": "^5.6.1",
-    "recharts": "^2.5.0",
+    "recharts": "^2.6.0",
     "recoil": "^0.7.7",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0",
@@ -42,9 +42,9 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@emotion/babel-preset-css-prop": "^11.10.0",
+    "@emotion/babel-preset-css-prop": "^11.11.0",
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.10.6",
+    "@emotion/react": "^11.11.0",
     "@graphql-codegen/cli": "^3.3.1",
     "@graphql-codegen/client-preset": "^3.0.1",
     "@graphql-typed-document-node/core": "^3.2.0",
@@ -52,17 +52,17 @@
     "@types/file-saver": "^2.0.5",
     "@types/lodash-es": "^4.17.7",
     "@types/luxon": "^3.3.0",
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
+    "@types/node": "^18.16.6",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/react-pdf": "^6.2.0",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint-config-jklasd2001s": "^0.0.1",
-    "kakao.maps.d.ts": "^0.1.36",
+    "kakao.maps.d.ts": "^0.1.38",
     "path": "^0.12.7",
     "typescript": "^5.0.4",
-    "vite": "^4.3.3",
+    "vite": "^4.3.5",
     "vite-plugin-svgr": "^2.4.0"
   },
   "eslintConfig": {
